--- a/index.html
+++ b/index.html
@@ -15,10 +15,15 @@
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
             min-height: 100vh;
+            min-height: -webkit-fill-available;
             display: flex;
             justify-content: center;
             align-items: center;
             padding: 20px;
+        }
+
+        html {
+            height: -webkit-fill-available;
         }
 
         .container {
@@ -253,6 +258,65 @@
             0% { transform: rotate(0deg); }
             100% { transform: rotate(360deg); }
         }
+
+        @media (max-width: 600px) {
+            body {
+                padding: 10px;
+            }
+
+            .container {
+                padding: 20px;
+                border-radius: 15px;
+            }
+
+            h1 {
+                font-size: 1.8em;
+                margin-bottom: 5px;
+            }
+
+            .subtitle {
+                font-size: 1em;
+                margin-bottom: 20px;
+            }
+
+            .input-section {
+                padding: 20px;
+                margin-bottom: 20px;
+            }
+
+            input[type="number"] {
+                padding: 12px;
+                font-size: 1.1em;
+            }
+
+            .button-group {
+                flex-direction: column;
+                gap: 15px;
+            }
+
+            button {
+                padding: 12px;
+                width: 100%;
+            }
+
+            .result-section {
+                padding: 20px;
+                margin-top: 20px;
+            }
+
+            .price-display {
+                font-size: 2em;
+            }
+
+            .model-info {
+                padding: 20px;
+                margin-top: 20px;
+            }
+
+            .info-grid {
+                grid-template-columns: 1fr;
+            }
+        }
     </style>
 </head>
 <body>
@@ -268,6 +332,7 @@
                     placeholder="Enter house size (e.g., 2000)" 
                     min="1" 
                     step="1"
+                    inputmode="decimal"
                 >
             </div>
             <div class="button-group">
