--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             background: white;
             border-radius: 20px;
             box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3);
-            max-width: 800px;
+            max-width: 1400px;
             width: 100%;
             padding: 40px;
             animation: fadeIn 0.5s ease-in;
@@ -240,7 +240,8 @@
             gap: 10px;
             margin-bottom: 30px;
             border-bottom: 2px solid #e0e0e0;
-            flex-wrap: wrap;
+            flex-wrap: nowrap;
+            overflow-x: auto;
         }
 
         .nav-tab {
@@ -253,6 +254,8 @@
             font-weight: 600;
             color: #666;
             transition: all 0.3s ease;
+            white-space: nowrap;
+            flex-shrink: 0;
         }
 
         .nav-tab:hover {
